syntax = "proto3";

package com.examples;

// 定义一个简单的服务
service Greeter {
  // 定义一个方法，接收一个请求并返回响应
  rpc sayHello (HelloRequest) returns (HelloResponse);
}

// 请求消息
message HelloRequest {
  string name = 1;
}

// 响应消息
message HelloResponse {
  string message = 1;
}
